objects/CN_Mass_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>CN_AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Mass Change Logs</relationshipLabel>
        <relationshipName>Mass_Change_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_After_User_Number__c</fullName>
        <label>After User Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Before_User_Number__c</fullName>
        <label>Before User number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_ChangeUser__c</fullName>
        <formula>CreatedById</formula>
        <label>ChangeUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Finance AR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mass Change Log</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mass Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>